--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Porfolio</title>
+</head>
+<body>
+  <header>
+      <p>Lorem, ipsum dolor.</p>
+      <h1>See Below for Projects</h1>
+  </header>  
 
+  <section>
+      <h2>Introduction</h2>
+      <div class="split">
+          <div>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut in alias tempora, rem assumenda maxime aut amet. Quis, natus enim? Reprehenderit adipisci perferendis error tempora.</p>
+          </div>
+          <div>
+              <p>Explicabo placeat dolorum est, amet consequuntur voluptatum laboriosam officiis velit! Laborum sapiente aut cupiditate officia ipsum vel incidunt voluptatibus aliquid. Saepe tempore soluta eius dolorum!</p>
+          </div>
+      </div>
+  </section>
+
+  <section>
+      <div class="split">
+          <div>
+              <h2>Project 1</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur enim rem minima veniam illo voluptates, eum minus omnis in suscipit beatae porro iure qui tempore!</p>
+          </div>
+          <div></div>
+      </div>
+  </section>
+  <section>
+      <div class="split">
+          <div>
+            <h2>Project 2</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur enim rem minima veniam illo voluptates, eum minus omnis in suscipit beatae porro iure qui tempore!</p>
+          </div>
+          <div></div>
+      </div>
+  </section>
+
+</body>
+</html>
