--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
               <h2>Project 1</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur enim rem minima veniam illo voluptates, eum minus omnis in suscipit beatae porro iure qui tempore!</p>
           </div>
-          <div></div>
+          <div>
+              <img src="img/Blank image.jpg" alt="Placeholder image for now">
+          </div>
       </div>
   </section>
   <section>
@@ -39,7 +41,9 @@
             <h2>Project 2</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur enim rem minima veniam illo voluptates, eum minus omnis in suscipit beatae porro iure qui tempore!</p>
           </div>
-          <div></div>
+          <div>
+            <img src="img/Blank image.jpg" alt="Placeholder image for now">
+        </div>
       </div>
   </section>
 
