--- a/index.html
+++ b/index.html
@@ -5,45 +5,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Porfolio</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@300;500&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <header>
-      <p>Lorem, ipsum dolor.</p>
-      <h1>See Below for Projects</h1>
+  <header class="bg-light text-center">
+        <div class="container container--narrow">
+            <p>Lorem, Gipsum dolor.</p>
+              <h1>See Below for Projects</h1>
+        </div>
   </header>  
 
   <section>
-      <h2>Introduction</h2>
-      <div class="split">
-          <div>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut in alias tempora, rem assumenda maxime aut amet. Quis, natus enim? Reprehenderit adipisci perferendis error tempora.</p>
-          </div>
-          <div>
-              <p>Explicabo placeat dolorum est, amet consequuntur voluptatum laboriosam officiis velit! Laborum sapiente aut cupiditate officia ipsum vel incidunt voluptatibus aliquid. Saepe tempore soluta eius dolorum!</p>
+      <div class="container">
+          <h2 class="text-center">Introduction</h2>
+          <div class="split">
+              <div>
+                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut in alias tempora, rem assumenda maxime aut amet. Quis, natus enim? Reprehenderit adipisci perferendis error tempora.</p>
+              </div>
+              <div>
+                  <p>Explicabo placeat dolorum est, amet consequuntur voluptatum laboriosam officiis velit! Laborum sapiente aut cupiditate officia ipsum vel incidunt voluptatibus aliquid. Saepe tempore soluta eius dolorum!</p>
+              </div>
           </div>
       </div>
   </section>
 
-  <section>
-      <div class="split">
-          <div>
-              <h2>Project 1</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur enim rem minima veniam illo voluptates, eum minus omnis in suscipit beatae porro iure qui tempore!</p>
-          </div>
-          <div>
-              <img src="img/Blank image.jpg" alt="Placeholder image for now">
+  <section class="bg-black">
+      <div class="container">
+          <div class="split">
+              <div>
+                  <h2>Project 1</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur enim rem minima veniam illo voluptates, eum minus omnis in suscipit beatae porro iure qui tempore!</p>
+              </div>
+              <div>
+                  <img src="img/Blank image.jpg" alt="Placeholder image for now">
+              </div>
           </div>
       </div>
   </section>
-  <section>
-      <div class="split">
-          <div>
-            <h2>Project 2</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur enim rem minima veniam illo voluptates, eum minus omnis in suscipit beatae porro iure qui tempore!</p>
+  <section class="bg-accent">
+      <div class="container">
+          <div class="split">
+              <div>
+                <h2>Project 2</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur enim rem minima veniam illo voluptates, eum minus omnis in suscipit beatae porro iure qui tempore!</p>
+              </div>
+              <div>
+                <img src="img/Blank image.jpg" alt="Placeholder image for now">
+            </div>
           </div>
-          <div>
-            <img src="img/Blank image.jpg" alt="Placeholder image for now">
-        </div>
       </div>
   </section>
 
