--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
   <header class="bg-light text-center">
         <div class="container container--narrow">
-            <p>Lorem, Gipsum dolor.</p>
-              <h1>See Below for Projects</h1>
+            <p>GLD</p>
+              <h1>Portfolio</h1>
         </div>
   </header>  
 
@@ -34,9 +34,9 @@
       </div>
   </section>
 
-  <section class="bg-black">
+  <section >
       <div class="container">
-          <div class="split">
+          <div class="split bg-black">
               <div>
                   <h2>Project 1</h2>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur enim rem minima veniam illo voluptates, eum minus omnis in suscipit beatae porro iure qui tempore!</p>
@@ -47,9 +47,9 @@
           </div>
       </div>
   </section>
-  <section class="bg-accent">
+  <section >
       <div class="container">
-          <div class="split">
+          <div class="split bg-accent">
               <div>
                 <h2>Project 2</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur enim rem minima veniam illo voluptates, eum minus omnis in suscipit beatae porro iure qui tempore!</p>
