--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur enim rem minima veniam illo voluptates, eum minus omnis in suscipit beatae porro iure qui tempore!</p>
               </div>
               <div>
-                  <img src="img/Blank image.jpg" alt="Placeholder image for now">
+                  <img src="img/Large Image.jpg" alt="Placeholder image for now">
               </div>
           </div>
       </div>
@@ -55,7 +55,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur enim rem minima veniam illo voluptates, eum minus omnis in suscipit beatae porro iure qui tempore!</p>
               </div>
               <div>
-                <img src="img/Blank image.jpg" alt="Placeholder image for now">
+                <img src="img/Large Image.jpg" alt="Placeholder image for now">
             </div>
           </div>
       </div>
