--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
       <div class="container">
           <div class="split bg-black">
               <div>
-                  <h2>Project 1</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur enim rem minima veniam illo voluptates, eum minus omnis in suscipit beatae porro iure qui tempore!</p>
+                  <h2>CSS Only Website</h2>
+                  <p>What I made: <br> A freely-resizable and responsive website in CSS and HTML using Gitpod and Github.</p>
+                  <p>What I learned: <br> The capabilities and limitations of CSS for responsitivty of websites. Emmet abbreviations. CSS transitions.  </p>
               </div>
               <div>
                   <img src="img/Large Image.jpg" alt="Placeholder image for now">
