--- a/index.html
+++ b/index.html
@@ -20,62 +20,61 @@
         </div>
   </header>  
 
-  <section>
-      <div class="container">
-          <h2 class="text-center">Welcome!</h2>
-          <div class="split">
-              <div>
-                  <p>I am a software designer with a background in teaching. I enjoy coding in JS, CSS, HTML, GAS, VBA and EEL2.</p>
-              </div>
-              <div>
-                  <p>Below you will find a number of my projects which should showcase some of my skills and abilites. All the works below are entirely my own.</p>
-              </div>
-          </div>
-      </div>
-  </section>
-
-  <section >
-      <div class="container">
-          <div class="split bg-black">
-              <div>
-                  <h2>CSS Only Website</h2>
-                  <p>What I made: <br> A freely-resizable and responsive website in CSS and HTML using Gitpod and Github.</p>
-                  <p>What I learned: <br> The capabilities and limitations of CSS for responsitivty of websites. Emmet abbreviations. CSS transitions.  </p>
-              </div>
-              <div>
-                  <img src="img/Large Image.jpg" alt="Placeholder image for now">
+      <section>
+          <div class="container">
+              <h2 class="text-center">Welcome!</h2>
+              <div class="split">
+                  <div>
+                      <p>I am a software designer with a background in teaching. I enjoy coding in JS, CSS, HTML, GAS, VBA and EEL2.</p>
+                  </div>
+                  <div>
+                      <p>Below you will find a number of my projects which should showcase some of my skills and abilites. All the works below are entirely my own.</p>
+                  </div>
               </div>
           </div>
-      </div>
-  </section>
-
-  <section >
-    <div class="container">
-        <div class="split bg-accent">
-            <div>
-                <h2>Webscraper</h2>
-                <p>What I made: <br> A webscraper chrome extension for developers to get and compare colour palletes etc. from multiple websites.</p>
-                <p>What I learned: <br> Typical site metadata and how to access it. Methods to create an array based scalable JS template for a website.  </p>
-            </div>
-            <div>
-                <img src="img/Large Image.jpg" alt="Placeholder image for now">
+      </section>
+      <section class= "flex">
+        <section >
+          <div class="container">
+              <div class="split bg-black">
+                  <div>
+                      <h2>CSS Only Website</h2>
+                      <p>What I made: <br> A freely-resizable and responsive website in CSS and HTML using Gitpod and Github.</p>
+                      <p>What I learned: <br> The capabilities and limitations of CSS for responsitivty of websites. Emmet abbreviations. CSS transitions.  </p>
+                  </div>
+                  <div>
+                      <img src="img/Large Image.jpg" alt="Placeholder image for now">
+                  </div>
+              </div>
+          </div>
+      </section>
+      <section >
+        <div class="container">
+            <div class="split bg-accent">
+                <div>
+                    <h2>Webscraper</h2>
+                    <p>What I made: <br> A webscraper chrome extension for developers to get and compare colour palletes etc. from multiple websites.</p>
+                    <p>What I learned: <br> Typical site metadata and how to access it. Methods to create an array based scalable JS template for a website.  </p>
+                </div>
+                <div>
+                    <img src="img/Large Image.jpg" alt="Placeholder image for now">
+                </div>
             </div>
         </div>
-    </div>
-</section>
-
-  <section >
-      <div class="container">
-          <div class="split bg-black">
-              <div>
-                <h2>Project 3</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur enim rem minima veniam illo voluptates, eum minus omnis in suscipit beatae porro iure qui tempore!</p>
+      </section>
+      <section >
+          <div class="container">
+              <div class="split bg-black">
+                  <div>
+                    <h2>Project 3</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur enim rem minima veniam illo voluptates, eum minus omnis in suscipit beatae porro iure qui tempore!</p>
+                  </div>
+                  <div>
+                    <img src="img/Large Image.jpg" alt="Placeholder image for now">
+                </div>
               </div>
-              <div>
-                <img src="img/Large Image.jpg" alt="Placeholder image for now">
-            </div>
           </div>
-      </div>
+      </section>
   </section>
 
 </body>
